* Campaign Monitoring: append available campaigns to report list instead of 
  indexing by ID. Fixes Elastix bug #1496.
* Dialer: Check whether the agent is on break before deciding that it should
  receive a scheduled call. Fixes Elastix bug #1497.
* Login Logout: fix English translations for titles. Fixes Elastix bug #1491.
* Agent Console: apparently a jQuery update now sends null variables in 
  javascript structs as empty strings instead of not-set variables in a 
  $.post() request. This causes the non-SSE mode of the Agent Console to spin
  endlessly. Fixed. Fixes Elastix bug #1479.
* Do not Call List: The action "Apply" had no effect if there were no pending
  calls. This scenario could happen if the DNC is loaded prior to defining the
  first outgoing call. Fixed.
* Calls per Hour, Graphic Calls per Hour: queue dropdown selection has never 
  worked. Fixed. Also, synchronize code between the two modules. Fixes Elastix 
  bug #1452.
* Agents, Callback Extensions: multiple fixes. Enforce uniqueness of agent 
  number across Agent and Callback agents on agent creation. Verify that agent
  number that is being modified actually exists. Fix removed successful return
  from agent modification. Agent modification screens may not longer change the
  agent number onscreen, as doing so has no effect on the actual record.
* Campaign Monitoring: add cancelling of long polling when switching campaigns
  in the absence of SSE (Internet Explorer). Otherwise multiple pollings may 
  accumulate. Additionally, invalidate the polling on server-side when the 
  monitored campaign is changed. Loosen up one call status comparison that 
  otherwise resulted in unnecessary refreshings in non-SSE mode. Update total
  counter properly when receiving incoming calls. Remove stray debugging 
  statement.
* Campaign Monitoring: add support for monitoring of incoming calls without an
  incoming campaign, by selection of raw queue. Add some i18n to labels.